# Multi-AI-Agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker commands.txt  grafana_metrics.txt  prometheus.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: styles.css
multi_agent_app/: launcher.py  main.py
multi_agent_app/backend/: api.py
multi_agent_app/cache/: cache_manager.py  cache_policy.py  exact_cache.py  query_classifier.py  semantic_cache.py  tool_cache.py
multi_agent_app/common/: custom_exception.py  logger.py
multi_agent_app/config/: settings.py
multi_agent_app/core/: agent.py  helper.py
multi_agent_app/frontend/: chat_handler.py  history_ui.py  main.py  session.py  sidebar_ui.py  ui.py  utils_ui.py
scripts/: generate_tree.sh
