[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_agent_app"
version = "0.1.0"
description = "Multi-agent AI app"
dependencies = [
    "langchain>=0.2.0",
    "langchain-groq",
    "langchain-openai",
    "langchain-community",
    "python-dotenv",
    "uvicorn",
    "fastapi",
    "pydantic",
    "streamlit",
    "langgraph"
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["."]
